# kokoro-reader

./: .env.example  .gitignore  =4.40.0  PLAN_ECHO_TTS.md  README.md  SETUP_TTS.md  inspect_mlx.py  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test.epub  test.epub.base64  vite.config.ts
.claude/: settings.local.json
e2e/: clarification.spec.ts  read-button.spec.ts
e2e/mocks/: tauri-mock.ts
python-tts/: qwen3_tts_cuda.py  requirements-cuda.txt
scripts/: build_sidecar.py  vendor-espeak-ng-macos.sh
src/: App.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/espeak-ng/: README.md
src-tauri/models/: README.md
src-tauri/src/: ai.rs  commands.rs  lib.rs  main.rs
src-tauri/src/epub/: mod.rs  parser.rs
src-tauri/src/tts/: audio.rs  chatterbox.rs  download.rs  echo_tts.rs  kokoro.rs  mod.rs  piper.rs  playback.rs  python_bridge.rs  streaming_source.rs
src/components/: AudioControls.css  AudioControls.tsx  ClarifyPopover.css  ClarifyPopover.tsx  EpubReader.css  EpubReader.tsx  ModelSetup.css  ModelSetup.tsx  Reader.css  Reader.tsx  SettingsPanel.css  SettingsPanel.tsx  Sidebar.css  Sidebar.tsx
src/components/ui/: button.tsx
src/hooks/: useAI.ts  useBook.ts  useKeyboardShortcuts.ts  useLibrary.ts  useModelSetup.ts  useSettings.ts  useTTS.ts
src/styles/: index.css  layout.css
