[package]
name = "kokoro-reader"
version = "0.1.0"
description = "Ebook reader with AI-powered text-to-speech using Kokoro-82M"
authors = ["you"]
edition = "2021"

[lib]
name = "kokoro_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio playback
rodio = { version = "0.19", default-features = false, features = ["wav", "symphonia-wav"] }

# EPUB parsing
epub = "2"

# Text processing
regex = "1"

# Async runtime
tokio = { version = "1", features = ["sync", "parking_lot", "rt-multi-thread"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Base64 encoding/decoding for audio data
base64 = "0.22"

# Platform directories for model storage
dirs = "6"
reqwest = { version = "0.13.1", features = ["json"] }
urlencoding = "2"

# Echo-1B native TTS (Sesame CSM-1B via Candle)
echo = { git = "https://gitlab.com/maxmcneal/echo-1b.git", branch = "main", default-features = false }

# Candle ML framework (needed for device selection and tensor ops in echo_tts)
candle-core = { git = "https://github.com/huggingface/candle.git" }

# Streaming audio pipeline
crossbeam-channel = "0.5"
futures-util = "0.3"

[features]
default = []
cuda = ["echo/cuda", "candle-core/cuda"]
cudnn = ["echo/cudnn"]
metal = ["echo/metal", "candle-core/metal"]
accelerate = ["echo/accelerate"]
mkl = ["echo/mkl", "candle-core/mkl"]

# Override echo-1b's local path dependency on moshi with the git source
[patch.'https://gitlab.com/maxmcneal/echo-1b.git']
moshi = { git = "https://github.com/kyutai-labs/moshi.git", branch = "main" }

# Ensure moshi and echo use the same candle version (git, not crates.io)
[patch.crates-io]
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
candle-kernels = { git = "https://github.com/huggingface/candle.git" }
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git" }
